manifests/default/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  labels:
    app: synapse
spec:
  selector:
    matchLabels:
      app: synapse
  replicas: 1
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - name: synapse
        image: matrixdotorg/synapse:latest
        ports:
        - containerPort: 8008
        volumeMounts:
        - mountPath: /data
          name: synapse-data
        resources:
          limits:
            cpu: 250m
            memory: 768Mi
            ephemeral-storage: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
            ephemeral-storage: 16Mi
      volumes:
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-data
