manifests/default/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  selector:
    app: synapse
  ports:
  - protocol: TCP
    port: 8008
    targetPort: 8008
    nodePort: 30071
  type: NodePort
